--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,37 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="carousel-container">
+
+    <div id="background-0">
+        <div class="background-overlay-image">
+            <div id="text-box-0" class="text-box">
+                <h1 id="background-header-0">Celine Heldrup</h1>
+            </div>
+                <p>Blog og ernæring</p>
+        </div>
+    </div>
+    <div id="background-1">
+        <div class="background-overlay-image">
+            <div id="text-box-1" class="text-box">
+                
+            </div>
+        </div>
+    </div>
+    <div id="background-2">
+        <div class="background-overlay-image">
+            <div id="text-box-2"class="text-box">
+            </div>
+        </div>
+    </div>
+    <div id="background-3">
+        <div class="background-overlay-image">
+        </div>
+    </div>
+
+    <button class="next-image-carousel button">></button>
+    <button class="previous-image-carousel button">&lt;</button>
+</div>
+
+
+
+{{!-- <img src="images/oils-background-image.png" alt="" id="oils-background">
+<img src="images/blueberries.png" alt="" id="blueberries-background">
+<img src="/images/heart-oil-background.png" alt="" id="heart-oil-background"> --}}
