--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,12 +2,15 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link href="https://fonts.googleapis.com/css?family=El+Messiri|Great+Vibes|Indie+Flower" rel="stylesheet">
+    {{!-- font-family: 'Indie Flower', cursive; --}}
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
 
     {{{body}}}
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src='/javascripts/script.js'></script>
   </body>
 </html>
